# AccuSNV

./: CNN_pred.py  DETAILED_CODE_ANALYSIS.md  OOM_FIX_README.md  README.md  README_old.md  accusnv_downstream.py  accusnv_snakemake.py  experiment_info.yaml  new_snv_script.py  pyproject.toml  readme.txt  test_local.sh  test_run.sh
Snakefiles_diff_options/: Snakefile_conda_env  Snakefile_local  Snakefile_prebuilt_env
Test_data_local/: candidate_mutation_table_final.npz
accusnv_cli/: downstream_entry.py  snakemake_entry.py
conda_test_dir/: samples_cae_test_pe.csv  test_run.sh
config_files/: config_no_memory.yaml  config_no_slurm.yaml
demo_output/: candidate_mutation_table_final.npz  snv_table_cnn_plus_filter.txt  snv_table_merge_all_mut_annotations_final.tsv  snv_table_with_charts_final.html
local_analysis/: CNN_pred.py  accusnv_downstream.py  accusnv_downstream_demo.ipynb  accusnv_downstream_demo_IDE.py  new_snv_script.py  test_local.sh
readme_files/: readme_annotation_table.md  readme_input_csv.md  readme_snake_run.md  readme_test_output.md  test_run_mac.md  test_run_spyder.md
scripts/: build_SNP_Tree.py  combine_positions.py  dry_run.sh  run_snakemake.slurm  run_snakemake_local.sh  snv_module_recoded_with_dNdS.py
snake_pipeline/: Snakefile  accusnv.yaml  accusnv_clean.yaml  accusnv_snakemake.py  config.yaml  download_install_env.sh  experiment_info.yaml  new_snv_script.py  samples.csv  samples_cae_test_pe.csv  test_run.sh
snake_pipeline/envs/: bwa.yaml
test_data_csv/: samples_cae_test_pe.csv  samples_cae_test_se.csv
training_script/: train.py
(+32 files in other folders)
